--- a/po/zh_Hans/syscontrol.po
+++ b/po/zh_Hans/syscontrol.po
@@ -10,7 +10,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 5.5-dev\n"
 
-msgid "System_control"
+msgid "System control"
 msgstr "系统控制"
 
 msgid "RAM Status"
